fixed responsive layout issues

--- a/pcss/main.pcss
+++ b/pcss/main.pcss
@@ -51,18 +51,24 @@ body {
 }
 
 .container {
-  lost-center: 80%;
+  lost-center: 30%;
 }
 
-@media only screen and (min-width: 767px) {
+@media only screen and (max-width: 1000px) {
   .container {
-    lost-center: 40%;
+    lost-center: 60%;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .container {
+    lost-center: 80%;
   }
 }
 
 .list-header {
   // height: 100%;
-  lost-center: 80% 40px;
+  lost-center: 90%;
 }
 
 .list-header div {
@@ -131,8 +137,8 @@ div.advisory-0 {
 }
 
 .city-container {
-  lost-offset: 2/6;
-  lost-column: 3/6;
+  lost-offset: 3/8;
+  lost-column: 4/8;
 }
 
 .city-container div {
@@ -147,7 +153,7 @@ div.advisory-0 {
 
 .data-container {
   height: 100%;
-  lost-column: 1/6;
+  lost-column: 1/8;
   lost-align: center;
 }
 
